[metadata]
name = python_travis
url = https://github.com/side-projects-collection/python-package-example
project_urls=
    Github = https://github.com/side-projects-collection/python-package-example
description = This is a project to use the Travis CI.
long_description = file: README.md,
long_description_content_type = text/markdown
keywords = Travis, CI
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
